修复了插件会修改主线程的问题 修复了修改提示词后，prompt记录错误的问题 优化了撤回部分的代码 删除了部分冗余代码 重构了部分代码，将玩家历史记录放在一起